--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,23 +5,6 @@ services:
     restart: always
     ports:
       - "127.0.0.1:5010:3000"
+    env_file: .env
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=mysql://u225637494_cidadao:20DKAms2@srv466.hstgr.io:3306/u225637494_cidadao
-
-  webhook:
-    container_name: cidadao-webhook
-    build: 
-      context: .
-      dockerfile: Dockerfile.webhook
-    command: -verbose -hooks=/etc/webhook/hooks.json -hotreload
-    restart: always
-    user: "0:0"
-    ports:
-      - "9000:9000"
-    volumes:
-      - ./hooks.json:/etc/webhook/hooks.json
-      - ./redeploy.sh:/var/scripts/redeploy.sh
-      - /var/run/docker.sock:/var/run/docker.sock
-      - ./:/app
-      - ~/.ssh:/root/.ssh
